# buddy

./: Cargo.toml  Plugins.toml  README.md
src/: main.rs
