[package]
name = "buddy"
version = "0.0.1"
edition = "2021"
authors = ["Ismael Jimenez"]
description = "The C++ package manager"
documentation = "https://github.com/ismaelJimenez/buddy"
homepage = "https://github.com/ismaelJimenez/buddy"
repository = "https://github.com/ismaelJimenez/buddy"
readme = "README.md"
keywords = ["c", "c++", "cpp", "cxx", "package"]
categories = ["command-line-utilities", "configuration", "build-utils"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
which = "4.4.0"
toml = "0.7.2"
clap = { version = "4.2.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
